add start letter to config

--- a/get_sd_ou/config.py.example
+++ b/get_sd_ou/config.py.example
@@ -2,6 +2,7 @@ class Config:
     THREADS_COUNT  = 15
     LOG_LEVEL      = 20 # OR logging.INFO | Debug = 10
     QUEUE_MAX_SIZE = 500
+    START_LETTER = ''
 
     DATABASE_HOST     = None
     DATABASE_USER     = None
