--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-aiohttp==3.7.3
 beautifulsoup4==4.9.3
-requests==2.25.1
-urllib3==1.26.2
-Flask==1.1.2
 bs4==0.0.1
-mysql==0.0.2
+mysql-connector-python==8.0.23
+protobuf==3.15.6
+six==1.15.0
+soupsieve==2.2.1
