--- a/get_sd_ou/config.py.example
+++ b/get_sd_ou/config.py.example
@@ -1,12 +1,12 @@
 class Config:
-    THREADS_COUNT  = 15
+    THREADS_COUNT  = 10
     LOG_LEVEL      = 20 # OR logging.INFO | Debug = 10
     QUEUE_MAX_SIZE = 500
     START_LETTER = ''
 
-    DATABASE_HOST     = None
-    DATABASE_USER     = None
-    DATABASE_PASSWORD = None
-    DATABASE_PORT     = None
+    DATABASE_HOST     = localhost
+    DATABASE_USER     = root
+    DATABASE_PASSWORD = 
+    DATABASE_PORT     = 3306
 
     PROXY_LIST_DIR = 'get_sd_ou/proxylist.txt'
